# fastapi-container-app-starter

./: README.md  mypy.ini  pyproject.toml
app/: main.py
app/api/middleware/: __init__.py  error_handler.py
app/api/routers/: items.py  system.py
app/core/models/: __init__.py  item.py
app/core/services/: __init__.py  item_service.py  system_service.py
app/infrastructure/repositories/: __init__.py  item_repository.py
tests/core/services/: test_item_service.py
tests/integration/: test_item_service_integration.py
